# ecom-intel-agent

./: .gitignore  README.md  package.json  pyproject.toml
backend/: __init__.py  main.py
backend/agents/: rag_agent.py  scraper.py
backend/db/: database.py
backend/models/: agent_run_log.py  analysis.py  product.py  report.py  scraped_competitors.py  scraped_result.py  sentiment.py  user.py  vector_indext.py
backend/routers/: agents.py  product.py  scraped_result.py  scraper.py  sentiment.py  summary_report.py  user.py
backend/scrapers/: amazon.py  base_scraper.py  ebay.py  flipkart.py  scraper_engine.py
backend/utils/: auth.py  mongo.py
chroma_db/: chroma.sqlite3
data/chroma_db/: chroma.sqlite3
data/chroma_db/7b7c2345-7cd2-4fc8-97c2-8f7212644763/: index_metadata.pickle
