[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecom-intel-agent"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "E-commerce Intelligence Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic",
    "pymongo",
    "python-dotenv",
    "uvicorn",
]

[tool.hatch.version]
path = "backend/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
